PMD fixes
Added Settings class and thread safe results windows